# modwire

./: .env  .gitignore  CHANGELOG.md  CONTRIBUTING.md  MANIFEST.in  Makefile  README.md  SCAFFOLDING.md  glossary.json  pyproject.toml  setup.cfg  show_test_source_files.py
.github/: PULL_REQUEST_TEMPLATE.md  human-approval-demo.md  modwire-ecosystem.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  decision.yml  epic.yml  feature_request.yml  release_train.yml  task.yml
.github/scripts/: reconcile_ecosystem.py
.github/workflows/: ci.yml  ecosystem-compatibility.yml  issue-metadata-check.yml  issue-metadata.yml  large-repo-fixtures.yml  modwire.code-workspace  python-github-release.yml  python-package.yml  python-release-assets.yml  python-release-build.yml  release.yml
.modwire/: boundaries.yaml  shape.yaml
docs/: architecture-analysis-contract.md  migration-5.md  migration-6.md
docs/decisions/: 0001-canonical-modwire-repository-shape.md  0002-architecture-identity-migration.md
docs/evidence/: README.md  architecture-repository-rename.json  structural-evidence.schema.json
docs/governance/: dependencies-and-release-trains.md  github-ecosystem.md  python-workflows.md
docs/scaffolding/: repository-contract-v1.yaml
docs/scaffolding/golden/: cli.yaml  library.yaml  mcp-django.yaml
docs/wiki/: Development-checks.md  Home.md  Reporting-bugs.md  Requesting-features.md
src/modwire/: __init__.py  app.py  callables.py  cli.py  definitions.py  di.py  exports.py  extraction.py  facade.py  graph.py  metadata.py
src/modwire/architecture/: __init__.py  analyzers.py  app.py  base.py  cli.py  composition.py  config.py  di.py  extraction.py  insights.py  map.py  matching.py  pipeline.py  policy.py  render.py  report.py  reporting.py  root.py  violations.py
src/modwire/architecture/boundaries/: __init__.py  analyzer.py  base.py  collector.py  composition.py  config.py  di.py  flow.py  map.py  matching.py  pipeline.py
src/modwire/architecture/flow/: __init__.py  backward.py  base.py  catalog.py  edge.py  no_cycles.py  no_reentry.py  pipeline.py  x_mod_dependency.py
src/modwire/architecture/insight/: __init__.py  base.py  callables.py  clusters.py  coherence.py  exports.py  hotspots.py  pipeline.py
src/modwire/architecture/insights/: __init__.py  base.py  collector.py  di.py
src/modwire/architecture/map/: __init__.py  base.py  collector.py  composition.py  di.py  loader.py  map.py  queries.py
src/modwire/architecture/reports/: __init__.py  architecture.py  collector.py
src/modwire/architecture/shape/: __init__.py  base.py  collector.py  composition.py  config.py  di.py  pipeline.py  rules.py  violations.py
src/modwire/code/: package.py  reader.py  writer.py
src/modwire/extraction/: __init__.py  cache.py  manifest.py  models.py  roots.py  serialization.py  service.py
src/modwire/extractors/: __init__.py  base.py  loader.py  php.py  python.py  resources.py  typescript.py
src/modwire/extractors/scripts/: __init__.py  php_extractor.php  python_extractor.py  typescript_extractor.js
src/modwire/glossary/: app.py  cli.py  di.py
src/modwire/glossary/services/: __init__.py  model.py  renderer.py  repository.py  term.py
src/modwire/insights/: callables.py  clusters.py  coherence.py  hotspots.py
src/modwire/layers/: __init__.py  app.py  cli.py  config.py  di.py
src/modwire/modules/: __init__.py  app.py  cli.py  config.py  di.py  generate.py
src/modwire/projects/: __init__.py  _operations.py  app.py  cli.py  config.py  di.py  ecosystem.py  generate.py  profile.py  root.py
src/modwire/scaffolding/: app.py  cli.py  config.py  di.py
src/modwire/scaffolding/services/: __init__.py  package.py  repository.py  scaffold.py
src/modwire/shape/: __init__.py  config.py  evaluator.py  rules.py  violations.py
src/modwire/shape/rule/: abstract_class_rules.py  class_rules.py  (+6 more)
src/modwire/shared/: __init__.py  base.py  config.py  console.py  context.py  di.py
src/modwire/testing/: __init__.py  factories.py
src/modwire_architecture/: __init__.py  facade.py
src/modwire_architecture/architecture/: __init__.py  app.py  composition.py  contract.py  normalization.py
src/modwire_architecture/code/: __init__.py  package.py
src/modwire_architecture/layers/: __init__.py  app.py
src/modwire_architecture/modules/: __init__.py  app.py
src/modwire_architecture/projects/: __init__.py  app.py  ecosystem.py
src/modwire_architecture/shared/: __init__.py  base.py
src/scaffoldings/projects/django-api/: Dockerfile  copier.yml  pyproject.toml
src/scaffoldings/projects/django-api/templates/: .dockerignore.jinja  .env.jinja  .gitignore.jinja  Dockerfile.jinja  Makefile.jinja  README.md.jinja  manage.py.jinja  openapi-python-client.yml.jinja  pyproject.toml.jinja
src/scaffoldings/projects/django-api/templates/.modwire/: boundaries.yaml.jinja  shape.yaml.jinja
src/scaffoldings/projects/django-api/templates/{{ base_app }}/: apps.py.jinja
src/scaffoldings/projects/django-api/templates/{{ base_app }}/api/health/: controller.py.jinja
src/scaffoldings/projects/django-api/templates/{{ project_package }}/: api.py.jinja  asgi.py.jinja  di.py.jinja  settings.py.jinja  urls.py.jinja  wsgi.py.jinja
tests/: test_api.py  test_architecture.py  test_architecture_api.py  test_boundaries.py  test_distribution_identity.py  test_ecosystem_contract.py  test_import_only_migration.py  test_import_shape.py  test_models.py  test_repository_shape_contract.py  test_scaffold_naming.py  test_scaffolding_generate.py  test_standalone.py
tests/architecture/: test_report.py
tests/architecture/boundaries/: test_map.py  test_pipeline.py
tests/architecture/insight/: test_insight_pipeline.py
tests/fixtures/import_only/: consumer_after.py  consumer_before.py
tests/functional/: cli_helpers.py
tests/functional/glossary/: helpers.py  test_glossary_cli.py
tests/functional/scaffolding/: test_scaffolding_cli.py
tests/large_projects/: README.md  fixtures.json  run_large_project_fixtures.py
tests/modules/: test_generate.py
tests/projects/: test_project_generate.py  test_project_operations.py
(+393 files in other folders)
