[build-system]
requires = ["setuptools>=77", "setuptools-scm[toml]>=8", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "modwire"
description = "Map architecture boundaries and analyze extracted code maps."
readme = "README.md"
requires-python = ">=3.12"
license = "MIT"
dynamic = ["version"]
authors = [
    {name = "Tomasz Szpak"},
]
keywords = [
    "architecture",
    "code-analysis",
    "dependency-graph",
    "static-analysis",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Typing :: Typed",
    "Topic :: Software Development",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Software Development :: Quality Assurance",
]
dependencies = [
    "modwire-extraction>=1.0.1",
    "modwire-mermaid>=1.0.0",
    "modwire-siren>=1.0.0",
    "pydantic>=2.12",
    "pydantic-yaml>=1.7.0",
]

[project.urls]
Homepage = "https://github.com/9orky/modwire"
Repository = "https://github.com/9orky/modwire"
Issues = "https://github.com/9orky/modwire/issues"

[project.optional-dependencies]
dev = [
    "build>=1.2",
    "pytest>=8.0",
    "ruff>=0.8",
    "twine>=5.1",
]

[dependency-groups]
dev = [
    "build>=1.2",
    "pytest>=8.0",
    "ruff>=0.8",
    "twine>=5.1",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
cache_dir = ".dev/pytest_cache"
addopts = ["-s"]

[tool.ruff]
cache-dir = ".dev/ruff_cache"

[tool.uv]
cache-dir = ".dev/uv_cache"

[tool.setuptools]
package-dir = {"" = "src"}
include-package-data = true

[tool.setuptools.package-data]
"*" = ["**/*"]

[tool.setuptools.exclude-package-data]
"*" = [
    "**/__pycache__/*",
    "**/*.py[cod]",
]

[tool.setuptools.packages.find]
where = ["src"]
namespaces = true
exclude = ["*.__pycache__", "*.__pycache__.*"]

[tool.setuptools_scm]
fallback_version = "0.0.0.dev0"
local_scheme = "no-local-version"
version_file = "src/modwire/_version.py"
