[project]
name = "{{project_name}}"
version = "0.1.0"
description = "Desc."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "django>=5.0,<6.0",
    "django-health-check>=3.18,<4.0",
    "django-ninja-extra>=0.21,<1.0",
    "pgvector>=0.3,<1.0",
    "psycopg[binary]>=3.2,<4.0",
    "gunicorn>=23.0,<24.0",
    "dj-database-url>=2.2,<3.0",
    "python-dotenv>=1.0,<2.0",
    "django-model-utils>=5.0,<6.0",
    "pydantic>=2.7,<3.0",
    "pyyaml>=6.0,<7.0",
]

[dependency-groups]
dev = [
    "openapi-python-client>=0.29.0",
    "pytest>=8.2,<9.0",
    "pytest-django>=4.8,<5.0",
    "ruff>=0.5,<1.0",
]

[tool.uv]
package = false

[tool.pytest.ini_options]
python_files = ["test_*.py", "*_test.py"]
testpaths = ["tests"]

[tool.ruff]
line-length = 160
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
ignore = ["B008"]

[tool.ruff.lint.per-file-ignores]
"*/migrations/*.py" = ["E501"]
